Samudra_Testing/samudra_output.log
Job 21775311.pbspl1.nas.nasa.gov started on Fri Mar 14 14:48:41 PDT 2025
The job requested the following resources:
    ncpus=20
    place=scatter:excl
    walltime=00:10:00

PBS set the following environment variables:
        FORT_BUFFERED = 1
                   TZ = PST8PDT

On r431i5n14:
Warning: no access to tty (Inappropriate ioctl for device).
Thus no job control in this shell.
Current directory is /nobackup/sruiz5/climate-sim/Samudra_Testing
Starting Samudra model run at Fri Mar 14 14:48:46 PDT 2025
  File "/nobackupp28/sruiz5/climate-sim/Samudra_Testing/samudra_plotting.py", line 201
    print(f'{list(data.data_vars)})
          ^
SyntaxError: unterminated string literal (detected at line 201)
Finished Samudra model run at Fri Mar 14 14:48:46 PDT 2025

____________________________________________________________________
Job Resource Usage Summary for 21775311.pbspl1.nas.nasa.gov

    CPU Time Used            : 00:00:01
    Real Memory Used         : 4kb
    Walltime Used            : 00:00:01
    Exit Status              : 0

    Number of CPUs Requested : 20
    Walltime Requested       : 00:10:00

    Execution Queue          : normal
    Charged To               : g26113

    Job Stopped              : Fri Mar 14 14:48:49 2025
____________________________________________________________________
